# snail-core

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements-test.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  publish-to-pypi.yml  release.yml
src/snail_core/: __init__.py  auth.py  cli.py  config.py  core.py  host_id.py  uploader.py
src/snail_core/collectors/: __init__.py  base.py  filesystem.py  hardware.py  logs.py  network.py  packages.py  security.py  services.py  system.py
tests/: __init__.py  conftest.py
tests/cli/: test_cli_basic.py  test_cli_collect.py  test_cli_host_id.py  test_cli_list.py  test_cli_status.py
tests/e2e/: test_cli_workflow.py  test_full_workflow.py
tests/error_handling/: test_collector_errors.py  test_collector_timeouts.py  test_config_errors.py  test_file_errors.py  test_upload_errors.py  test_upload_retries.py
tests/integration/: test_collector_integration.py  test_config_integration.py  test_upload_integration.py
tests/multi_distro/: __init__.py  test_apparmor.py  test_apt_distros.py  test_dnf_distros.py  test_firewall.py  test_package_manager_fallback.py  test_selinux.py  test_yum_distros.py  test_zypper_distros.py
tests/performance/: test_collection_performance.py  test_large_datasets.py
tests/unit/: __init__.py  test_base_collector.py  test_config.py  test_core.py  test_host_id.py  test_uploader.py
tests/unit/test_collectors/: __init__.py  test_filesystem.py  test_hardware.py  test_logs.py  test_network.py  test_packages.py  test_security.py  test_services.py  test_system.py
